RESOLVED FIXED306240
Address unsafe cast warnings under WebCore/svg/properties
https://bugs.webkit.org/show_bug.cgi?id=306240
Summary Address unsafe cast warnings under WebCore/svg/properties
Chris Dumez
Reported 2026-01-25 18:42:47 PST
Address unsafe cast warnings under WebCore/svg/properties by making SVGAnimatedProperty templated.
Attachments
Chris Dumez
Comment 1 2026-01-25 18:45:23 PST
EWS
Comment 2 2026-01-27 16:22:36 PST
Committed 306314@main (68aaf59bb3f5): <https://commits.webkit.org/306314@main> Reviewed commits have been landed. Closing PR #57228 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-27 16:23:12 PST
Note You need to log in before you can comment on or make changes to this bug.